restaurant/devops/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: restaurant
  template:
    metadata:
      labels:
        app: restaurant
    spec:
      containers:
        - name: restaurant
          image: ghcr.io/smiggiddy/odin-codeprojects/restaurant:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: restaurant-service
spec:
  selector:
    app: restaurant
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
