restaurant/devops/restaurant-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restaurant-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  rules:
    - host: restaurant.odin.thecodedom.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: restaurant-service
                port:
                  number: 80
  tls:
    - hosts:
        - restaurant.odin.thecodedom.com
      secretName: restaurant-tls
